# final-project

./: pyproject.toml
model/: rf_model.pkl
notebooks/: HR_succession.ipynb  HR_succession_final.ipynb  README.md
streamlit_app/: app.py
